--- a/sass/base/reset.css
+++ b/sass/base/reset.css
@@ -41,8 +41,4 @@ table {
 
 td, th {
   padding: 0;
-}
-
-body {
-  background-color: yellow;
-}/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=reset.css.map */
