--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,62 @@
+@charset "UTF-8";
+/*Font-size*/
+body p {
+  font-size: 16px;
+  font-family: "Roboto";
+  font-weight: 300;
+}
+
+h1 {
+  font-family: "Shrikhand";
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+h2 {
+  font-size: 1.5rem;
+  font-family: "Roboto";
+  font-weight: 700;
+}
+
+h3 {
+  font-family: "Roboto";
+  font-size: 18px;
+  font-weight: 700;
+}
+
+p {
+  font-family: "Roboto";
+  font-size: 17px;
+  font-weight: 300;
+}
+
+.presentation h1 {
+  font-family: "Roboto";
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.presentation p {
+  font-family: "Roboto";
+  font-weight: 300;
+  font-size: 18px;
+}
+
+.presentation a {
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.restaurants h2 {
+  padding-left: 1px;
+}
+
+.intitule_plat p {
+  font-size: 0.94rem;
+}
+
 /*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
 html, body, p, ol, ul, li, dl, dt, dd, blockquote, figure, fieldset, legend, textarea, pre, iframe, hr, h1, h2, h3, h4, h5, h6 {
   margin: 0;
@@ -43,8 +102,349 @@ td, th {
   padding: 0;
 }
 
-body {
-  background-color: blue;
+ol, ul {
+  list-style: none;
+}
+
+header {
+  display: flex;
+  height: 63px;
+  padding: 14px 89px 13px 89px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+}
+
+header a {
+  position: absolute;
+  left: 1rem; /* Ajustez cette valeur selon vos besoins */
+}
+
+header img {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+header a i {
+  color: black;
+}
+
+footer {
+  display: flex;
+  padding: 22px 25px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  background-color: #353535;
+}
+
+footer img {
+  filter: invert(100%);
+  height: 1.3rem;
+}
+
+footer li {
+  display: flex;
+  align-items: center;
+  gap: 7px;
+  line-height: 1.5;
+}
+
+footer i {
+  color: white;
+}
+
+footer p {
+  color: #FFF;
+}
+
+.localisation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  background-color: #EAEAEA;
+  height: 50px;
+}
+
+.localisation p {
+  font-weight: 500;
+  color: #353535;
+}
+
+.presentation {
+  background-color: #F6F6F6;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  row-gap: 1.5rem;
+  padding: 2.5rem 1.5rem 3.5rem 2rem;
+}
+
+.presentation h1 {
+  height: 4.25rem;
+  margin-bottom: -1.5rem;
+}
+
+.presentation p {
+  height: 2.87rem;
+  margin-bottom: 0rem;
+}
+
+.presentation button {
+  border-radius: 25px;
+  border: 1px solid var(--Button-Gradient, linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%));
+  background: var(--Button-Gradient, linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%));
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+  height: 3.125rem;
+  width: 13.625rem;
+}
+
+.presentation button a {
+  text-decoration: none;
+  color: var(--White, #FFF);
+  height: 1.5rem;
+}
+
+.fonctionnement {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.5rem;
+  padding: 3rem 1.25rem 4.25rem 2rem;
+}
+
+.fonctionnement p {
+  font-weight: 500;
+}
+
+.fonctionnement ol {
+  list-style-type: none;
+  padding: 0;
+}
+
+.fonctionnement li {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 25px; /* Espacement entre les rectangles */
+  width: 20.125rem;
+  height: 4.52rem;
+  background: var(--Background, #F6F6F6);
+  border-radius: 20px; /* Bords arrondis */
+  overflow: hidden; /* Pour s'assurer que le contenu à l'intérieur ne dépasse pas le rectangle */
+  border: 1px solid #f5f5f5; /* Bordure de 1 pixel */
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+}
+
+.fonctionnement li::before {
+  content: ""; /* Réinitialise le contenu par défaut */
+  position: absolute;
+  width: 1.4rem; /* Largeur du cercle */
+  height: 1.4rem; /* Hauteur du cercle */
+  border-radius: 50%; /* Pour créer un cercle */
+  background-color: #9356DC; /* Couleur du cercle */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white; /* Couleur du texte à l'intérieur du cercle */
+  font-weight: 500;
+  font-size: 14px; /* Taille du texte à l'intérieur du cercle */
+  left: 21px; /* Ajustement pour le positionnement du cercle à gauche du rectangle */
+}
+
+.fonctionnement li:nth-child(1)::before {
+  content: "1";
+}
+
+.fonctionnement li:nth-child(2)::before {
+  content: "2";
+}
+
+.fonctionnement li:nth-child(3)::before {
+  content: "3";
+}
+
+.fonctionnement li i {
+  margin: 0 25px 0 25px; /* Espacement entre l'icône et le texte */
+}
+
+.fonctionnement li p {
+  margin: 15px 0; /* Espacement du texte à l'intérieur du rectangle */
+}
+
+.fonctionnement li:nth-child(1) i,
+.fonctionnement li:nth-child(2) i {
+  color: #7E7E7E;
+}
+
+.fonctionnement li:nth-child(3) i {
+  color: #9356DC;
+}
+
+.restaurants {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.5rem;
+  padding: 3.5rem 1.25rem 4rem 1.25rem;
+  background-color: #F6F6F6;
+}
+
+.restaurant h2 {
+  margin-right: 1.25rem;
+}
+
+.liste_cartes {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.25rem;
+  padding: 1.1rem;
+}
+
+.carte_restaurant {
+  position: relative;
+  border-radius: 1rem;
+}
+
+.restaurants img {
+  height: 174px;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 1rem 1rem 0 0;
+}
+
+.restaurants .description_carte {
+  padding: 0.75rem 0 0.25rem 0.75rem;
+  border-radius: 0 0 1rem 1rem;
+}
+
+.restaurant {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.5rem;
+  padding: 3.5rem 1.25rem 4rem 1.25rem;
+}
+
+.liste_cartes {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.25rem;
+}
+
+.carte_restaurant {
+  position: relative;
+  border-radius: 1rem;
+  box-shadow: 0px 4px 5px 0px;
+  border-radius: 1rem;
+}
+
+.restaurant img {
+  height: 9.8rem;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 1rem 1rem 0 0;
+}
+
+.description_carte {
+  padding: 0.75rem 0 0.25rem 0.75rem;
+  border-radius: 0 0 1rem 1rem;
+}
+
+.restaurants h3, .restaurants p {
+  color: #000;
+  text-decoration: none;
+}
+
+main img {
+  height: 17.18rem;
+  width: 100%;
+  object-fit: cover;
+}
+
+.menu {
+  position: relative;
+  margin-top: -3.5rem;
+  border-radius: 2.5rem 2.5rem 0px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 2.5rem;
+  padding: 2rem 1rem 2rem 1rem;
+  background-color: #F6F6F6;
+}
+
+.conteneur_coeur {
+  display: flex;
+  justify-content: space-between;
+  width: 21.3125rem;
+}
+
+.conteneur_coeur h1 {
+  font-size: 1.75rem; /* Taille du titre h1 (ajuste la valeur selon tes besoins) */
+  /* Autres styles que tu souhaites appliquer à h1 */
+  overflow: hidden; /* Évite que le texte dépasse du conteneur */
+  white-space: nowrap; /* Empêche le texte de se couper sur plusieurs lignes */
+  margin: 0; /* Pour enlever la marge par défaut du h1 */
+}
+
+.section_menu {
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.75rem;
+  width: 100%;
+}
+
+h3::after {
+  display: block;
+  width: 2.5rem;
+  height: 3px;
+  background: #99E2D0;
+  margin-top: 0.75rem;
+}
+
+.intitule_plat {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 21.5rem;
+  height: 4.5rem;
+  background: var(--Background, #F6F6F6);
+  border-radius: 20px; /* Bords arrondis */
+  overflow: hidden; /* Pour s'assurer que le contenu à l'intérieur ne dépasse pas le rectangle */
+  border: 1px solid #f5f5f5; /* Bordure de 1 pixel */
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+  overflow: hidden; /* Évite que le texte dépasse du conteneur */
+  white-space: nowrap; /* Empêche le texte de se couper sur plusieurs lignes */
+  overflow: hidden; /* Évite que le texte dépasse du conteneur */
+  white-space: nowrap; /* Empêche le texte de se couper sur plusieurs lignes */
+}
+
+.intitule_plat span {
+  margin-left: auto;
+  margin-top: 1.87rem;
+}
+
+.intitule_plat h3 {
+  margin-bottom: 0.31rem; /* Espacement entre le h3 et le p */
+}
+
+button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 25px;
+  border: 1px solid var(--Button-Gradient, linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%));
+  background: var(--Button-Gradient, linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%));
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+  height: 3.125rem;
+  width: 11.625rem;
+}
+
+button p {
+  text-decoration: none;
+  color: var(--White, #FFF);
+  height: 1.5rem;
+  font-weight: 400;
 }
 
 /*# sourceMappingURL=styles.css.map */
