--- a/scss/base/colors.scss
+++ b/scss/base/colors.scss
@@ -1,3 +1,3 @@
 $primary-color: #9356DC;
-$secondary-color:#FF79DA ;
-$accent-color: #99E2D0;
+$secondary-color: #FF79DA;
+$tertiary-color: #99E2D0;
