--- a/scss/base/fonts.scss
+++ b/scss/base/fonts.scss
@@ -1,2 +1,67 @@
-font-family: 'Roboto', sans-serif;
-font-family: 'Shrikhand', serif;
+$primary-font: "Roboto";
+$secondary-font: "Shrikhand";
+
+/*Font-size*/
+
+body p {
+    font-size: 16px;
+    font-family: $primary-font;
+    font-weight: 300;
+}
+
+.homepage{
+
+    
+   
+}
+
+h1 {
+    font-family: $secondary-font;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+h2 {
+    font-size: 1.5rem;
+    font-family: $primary-font;
+    font-weight: 700;
+}
+
+h3 {
+    font-family: $primary-font;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+p{
+    font-family: $primary-font;
+    font-size: 17px;
+    font-weight: 300;
+
+}
+
+.presentation h1 {
+    font-family: $primary-font;
+    font-size: 24px;
+    font-weight: 700;
+}
+.presentation p {
+    font-family: $primary-font;
+    font-weight: 300;
+    font-size: 18px;
+}
+
+.presentation a {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.restaurants h2 {
+    padding-left: 1px;
+}
+
+.intitule_plat p {
+    font-size: 0.94rem;
+}
