--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,11 @@
-@import "base/reset.scss";
-
-body{
-    background-color: blue;
-}
+@import "./base/colors.scss";
+@import"./base/fonts.scss";
+@import "./base/reset.scss";
+@import "./components/button.scss";
+@import "./layout/header.scss";
+@import "./layout/footer.scss";
+@import "./pages/home.scss";
+@import "./pages/restaurant.scss";
+@import "./utils/functions.scss";
+@import "./utils/mixins.scss";
+@import "./utils/variables.scss";
