--- a/scss/base/fonts.scss
+++ b/scss/base/fonts.scss
@@ -15,6 +15,11 @@ body p {
    
 }
 
+.fonctionnement, .restaurants h2 {
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
 h1 {
     font-family: $secondary-font;
     font-size: 28px;
