--- a/scss/layout/header.scss
+++ b/scss/layout/header.scss
@@ -5,11 +5,14 @@ header {
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
+    box-shadow: 0px 35px 50px 0px;
+    position: relative; /* Ajoutez cette ligne pour permettre le positionnement absolu de l'ombre */
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15); 
 }
 
 header a {
     position: absolute;
-    left: 1rem; /* Ajustez cette valeur selon vos besoins */
+    left: 1rem; 
 }
 
 header img {
