--- a/scss/pages/restaurant.scss
+++ b/scss/pages/restaurant.scss
@@ -23,11 +23,9 @@ main img {
 }
 
 .conteneur_coeur h1 {
-    font-size: 1.75rem; /* Taille du titre h1 (ajuste la valeur selon tes besoins) */
-    /* Autres styles que tu souhaites appliquer à h1 */
+    font-size: 1.75rem; 
     overflow: hidden; /* Évite que le texte dépasse du conteneur */
     white-space: nowrap; /* Empêche le texte de se couper sur plusieurs lignes */
-    margin: 0; /* Pour enlever la marge par défaut du h1 */
 }
 
 
@@ -38,13 +36,14 @@ main img {
     width: 100%;
 }
 
-h3::after {
-    
+.section_menu h2::after {
+    content: ""; /* Ajoutez cette ligne pour que ::after génère un contenu */
+    display: block;
     display: block;
     width: 2.5rem;
     height: 3px;
     background: $tertiary-color;
-    margin-top: 0.75rem;
+    margin-top: 0.5rem;
 }
 
 
@@ -55,13 +54,11 @@ h3::after {
     width: 21.5rem;
     height: 4.5rem;
     background: var(--Background, #F6F6F6);
-    border-radius: 20px; /* Bords arrondis */
+    border-radius: 20px; 
     overflow: hidden; /* Pour s'assurer que le contenu à l'intérieur ne dépasse pas le rectangle */
-    border: 1px solid #f5f5f5; /* Bordure de 1 pixel */
+    border: 1px solid #f5f5f5; 
     box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-    overflow: hidden; /* Évite que le texte dépasse du conteneur */
-    white-space: nowrap; /* Empêche le texte de se couper sur plusieurs lignes */
-    overflow: hidden; /* Évite que le texte dépasse du conteneur */
+    overflow: hidden; 
     white-space: nowrap; /* Empêche le texte de se couper sur plusieurs lignes */
 }
 
@@ -71,7 +68,7 @@ h3::after {
 }
 
 .intitule_plat h3 {
-    margin-bottom: 0.31rem; /* Espacement entre le h3 et le p */
+    margin-bottom: 0.31rem; 
 }
 
 
