--- a/scss/layout/footer.scss
+++ b/scss/layout/footer.scss
@@ -1,28 +1,57 @@
 footer {
-    display: flex;
-    padding: 22px 25px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 16px;
-    background-color: #353535;
-}
+  display: flex;
+  padding: 1.375rem 1.56rem;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 2rem;
+  background-color: #353535;
 
-footer img{
+
+  img {
     filter: invert(100%);
     height: 1.3rem;
-}
+  }
 
-footer li {
+  li {
     display: flex;
     align-items: center;
-    gap: 7px;
+    gap: 0.438rem;
     line-height: 1.5;
+  }
+
+  i, p, a {
+    color: $quaternary-color;
+  }
+
+  a {
+    text-decoration: none;
+  }
 }
 
-footer i {
-    color: white;
-}
 
-footer p {
-    color: #FFF;
+
+  @media (min-width: 992px) {
+    footer {
+      display: flex;
+      flex-direction: row-reverse;
+      column-gap: 5rem;
+      padding: 0 7rem 0 0;
+      height: 7.125rem;
+      & ul {
+          display: flex;
+          transform: translateY(3.5rem); // Déplacer l'image vers le bas sans affecter la hauteur du footer
+          margin-left: 10rem;
+      }
+      & li{
+        row-gap: 1rem;
+        margin-right: 1rem;
+      }
+      img{
+        transform: translateY(3.5rem); 
+        margin-right: -4rem;
+      }
+      span {
+        padding: 2rem;
+      }
+  }
 }
