--- a/scss/pages/home.scss
+++ b/scss/pages/home.scss
@@ -2,14 +2,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 1.25rem;
     background-color: #EAEAEA;
     height: 3.125rem;
-}
+    padding-right: 1rem;
 
-.localisation p {
-    font-weight: 500;
-    color:#353535;
+    p {
+        font-weight: 500;
+        color: #353535;
+    }
 }
 
 .presentation {
@@ -19,27 +20,12 @@
     text-align: center;
     row-gap: 1.5rem;
     padding: 2.5rem 1.5rem 3.5rem 2rem;
-    background-color: #F6F6F6;
-}
+    background-color: $quaternary-color;
 
-.presentation h1 {
-    height: 4.25rem;
-    margin-bottom: -1.5rem;
-}
-
-.presentation button {
-    border-radius: 25px;
-    border: 1px solid var(--Button-Gradient, linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%));
-    background: var(--Button-Gradient, linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%));
-    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
-    height: 3.125rem;
-    width: 13.625rem;
-}
-
-.presentation button a {
-    text-decoration: none;
-    color: var(--White, #FFF);
-    height: 1.5rem;
+    h1 {
+        height: 4.25rem;
+        margin-bottom: -1.5rem;
+    }
 }
 
 .fonctionnement {
@@ -47,87 +33,98 @@
     flex-direction: column;
     row-gap: 1.5rem;
     padding: 3rem 1.25rem 4.25rem 2rem;
+  
+    h2 {
+      margin-right: 2rem;
+    }
+  
+    ol {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      list-style-type: none;
+      width: 100%;
+      padding: 0;
+  
+      li {
+        display: flex;
+        align-items: center;
+        margin-bottom: 1.56rem;
+        width: 95%;
+        height: 4.52rem;
+        background: var(--Background, $quaternary-color);
+        border-radius: 20px;
+        overflow: hidden;
+        border: 1px solid $quaternary-color;
+        box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+  
+        &::before {
+          content: "";
+          position: absolute;
+          width: 1.4rem;
+          height: 1.4rem;
+          border-radius: 50%;
+          background-color: $primary-color;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          color: $quaternary-color;
+          font-weight: 500;
+          font-size: 14px;
+          margin-left: -0.75rem;
+        }
+  
+        &:nth-child(1)::before {
+          content: "1";
+        }
+  
+        &:nth-child(2)::before {
+          content: "2";
+        }
+  
+        &:nth-child(3)::before {
+          content: "3";
+        }
+  
+        i {
+          margin: 0 1.56rem 0 1.56rem;
+        }
+  
+        p {
+          margin: 0.93rem 0;
+        }
+  
+        &:nth-child(1) i,
+        &:nth-child(2) i {
+          color: #7E7E7E;
+        }
+  
+        &:nth-child(3) i {
+          color: $primary-color;
+        }
+      }
+    }
+  
+    p {
+      font-weight: 500;
+    }
+  }
+
+.fonctionnement span {
+    padding-left: 0.4rem;
 }
 
-.fonctionnement p { /**/
-    font-weight: 500;
-}
-
-.fonctionnement h2 {
-    margin-right: 2rem;
-}
-
-.fonctionnement ol {
-    list-style-type: none;
-    padding: 0;
-}
-
-.fonctionnement li {
+.restaurant__container {
     display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    margin-bottom: 1.56rem;
-    width: 20.125rem;
-    height: 4.52rem;
-    background: var(--Background, #F6F6F6);
-    border-radius: 20px; 
-    overflow: hidden; /* Pour s'assurer que le contenu à l'intérieur ne dépasse pas le rectangle */
-    border: 1px solid #f5f5f5; 
-    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+    flex-direction: column;
+    gap: 2rem;
 }
-
-.fonctionnement li::before {
-    content: ""; /* Réinitialise le contenu par défaut */
-    position: absolute;
-    width: 1.4rem; /* Largeur du cercle */
-    height: 1.4rem; /* Hauteur du cercle */
-    border-radius: 50%; /* Pour créer un cercle */
-    background-color: #9356DC; 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white; 
-    font-weight: 500;
-    font-size: 14px; 
-    left: 21px; 
-}
-
-
-.fonctionnement li:nth-child(1)::before {
-    content: "1";
-}
-
-.fonctionnement li:nth-child(2)::before {
-    content: "2";
-}
-
-.fonctionnement li:nth-child(3)::before {
-    content: "3";
-}
-
-.fonctionnement li i {
-    margin: 0 25px 0 25px; /* Espacement entre l'icône et le texte */
-}
-
-.fonctionnement li p {
-    margin: 15px 0; /* Espacement du texte à l'intérieur du rectangle */
-}
-
-.fonctionnement li:nth-child(1) i,
-.fonctionnement li:nth-child(2) i {
-    color: #7E7E7E;
-}
-
-.fonctionnement li:nth-child(3) i {
-    color: #9356DC;
-}
-
 .restaurants {
     display: flex;
     flex-direction: column;
     row-gap: 1.5rem;
     padding: 3.5rem 1.25rem 4rem 1.25rem;
-    background-color: #F6F6F6;
+    background-color: $quaternary-color;
 }
 
 .liste_cartes {
@@ -141,42 +138,41 @@
     border-radius: 1rem;
     background: #FFF;
     box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.10);
-    border-radius: 1rem;  
-}
 
-.carte_restaurant img {
-    height: 10rem;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 1rem 1rem 0 0; 
-}
+    img {
+        height: 10rem;
+        width: 100%;
+        object-fit: cover;
+        border-radius: 1rem 1rem 0 0;
+    }
 
-.carte_restaurant a {
-    text-decoration: none;
-    color: inherit;
-    display: flex; 
-    flex-direction: column;
+    a {
+        text-decoration: none;
+        color: inherit;
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 .description_carte {
     display: flex;
     flex-direction: column;
-}
 
-.description_carte h3 {
-    padding-top: 0.75rem;
-    padding-bottom: 0.4rem;
-    padding-left: 0.75rem;
-}
+    h3 {
+        padding-top: 0.75rem;
+        padding-bottom: 0.4rem;
+        padding-left: 0.75rem;
+    }
 
-.description_carte p {
-    padding-left: 0.75rem;
+    p {
+        padding-left: 0.75rem;
+    }
 }
 
 .logo_coeur {
     display: flex;
-    justify-content: flex-end; 
-    
+    justify-content: flex-end;
+
 }
 
 .restaurants .liste_cartes .carte_restaurant.nouveau::after {
@@ -184,8 +180,43 @@
     position: absolute;
     top: 0.5rem;
     right: 0.5rem;
-    background-color: #99E2D0;
+    background-color: $tertiary-color;
     color: #008766;
     padding: 0.25rem 0.5rem;
     font-family: $primary-font;
+}
+
+/*Media query*/
+
+@media (min-width: 992px) {
+    
+    .presentation h1 {
+        font-size: 40px;
+    }
+
+    .fonctionnement {
+        padding-left: 10rem;
+        padding-right: 10rem;
+      
+        ol {
+          flex-direction: row;
+          gap: 2rem;
+      
+          li {
+            width: 80%;
+          }
+        }
+      }
+      
+      .restaurants{
+        padding-left: 10rem; 
+        padding-right: 10rem; 
+      }
+         
+    .liste_cartes {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: 6.25rem;
+        grid-row-gap: 3.12rem;
+    }
 }
