--- a/scss/pages/restaurant.scss
+++ b/scss/pages/restaurant.scss
@@ -7,87 +7,88 @@ main img {
 .menu {
     position: relative;
     margin-top: -3.5rem;
-    border-radius: 2.5rem 2.5rem 0px 0px;
+    border-radius: 2.5rem 2.5rem 0 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     row-gap: 2.5rem;
     padding: 2rem 1rem 2rem 1rem;
-    background-color: #F6F6F6 ;
+    background-color: $quaternary-color;
 }
 
 .conteneur_coeur {
     display: flex;
     justify-content: space-between;
     width: 21.3125rem;
-}
 
-.conteneur_coeur h1 {
-    font-size: 1.75rem; 
-    overflow: hidden; /* Évite que le texte dépasse du conteneur */
-    white-space: nowrap; /* Empêche le texte de se couper sur plusieurs lignes */
+    h1 {
+        font-size: 1.65rem;
+        overflow: hidden;
+        white-space: nowrap;
+    }
 }
-
 
 .section_menu {
     display: flex;
     flex-direction: column;
     row-gap: 0.75rem;
     width: 100%;
-}
 
-.section_menu h2::after {
-    content: ""; /* Ajoutez cette ligne pour que ::after génère un contenu */
-    display: block;
-    display: block;
-    width: 2.5rem;
-    height: 3px;
-    background: $tertiary-color;
-    margin-top: 0.5rem;
-}
 
+    h2::after {
+        content: "";
+        display: block;
+        width: 2.5rem;
+        height: 0.188rem;
+        background: $tertiary-color;
+        margin-top: 0.5rem;
+    }
+}
 
 .intitule_plat {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    width: 21.5rem;
+    width: 100%;
     height: 4.5rem;
-    background: var(--Background, #F6F6F6);
-    border-radius: 20px; 
-    overflow: hidden; /* Pour s'assurer que le contenu à l'intérieur ne dépasse pas le rectangle */
-    border: 1px solid #f5f5f5; 
+    background: var(--Background, $quaternary-color);
+    border-radius: 20px;
+    overflow: hidden;
+    border: 1px solid $quaternary-color;
     box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-    overflow: hidden; 
-    white-space: nowrap; /* Empêche le texte de se couper sur plusieurs lignes */
+    overflow: hidden;
+    white-space: nowrap;
+    align-self: center;
+
+    span {
+        margin-left: auto;
+        margin-top: 1.87rem;
+    }
+
+    h3 {
+        margin-bottom: 0.15rem;
+    }
+
+    p {
+        margin-bottom: 0.5rem;
+    }
 }
 
-.intitule_plat span {
-    margin-left: auto;
-    margin-top: 1.87rem;
+
+/*Media query*/
+
+@media (min-width: 992px) {
+    .menu {
+        justify-content: center;
+        align-items: center;
+        padding-bottom: 2.5rem;
+        width: 70%;
+        margin-left: 15%;
+    }
+
+
+    .section_menu {
+        padding-left: 10rem;
+        padding-right: 10rem;
+    }
 }
-
-.intitule_plat h3 {
-    margin-bottom: 0.31rem; 
-}
-
-
-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 25px;
-    border: 1px solid var(--Button-Gradient, linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%));
-    background: var(--Button-Gradient, linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%));
-    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
-    height: 3.125rem;
-    width: 11.625rem;
-}
-
-button p {
-    text-decoration: none;
-    color: var(--White, #FFF);
-    height: 1.5rem;
-    font-weight: 400;
-}
-
