--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,18 +1,19 @@
 /*Font-size*/
 body p {
-  font-size: 16px;
+  font-size: 1rem;
   font-family: "Roboto";
   font-weight: 300;
 }
 
-.fonctionnement, .restaurants h2 {
+.fonctionnement,
+.restaurants h2 {
   font-size: 1.5rem;
   font-weight: 700;
 }
 
 h1 {
   font-family: "Shrikhand";
-  font-size: 28px;
+  font-size: 1.75rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -110,36 +111,55 @@ ol, ul {
   list-style: none;
 }
 
+/*Bouton Homepage*/
 .presentation button {
   border-radius: 25px;
-  border: 1px solid var(--Button-Gradient, linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%));
+  border: 0px solid;
   background: var(--Button-Gradient, linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%));
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
   height: 3.125rem;
   width: 13.625rem;
 }
-.presentation button a {
+.presentation button:hover {
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.15) 100%), linear-gradient(201deg, #9356DC -5.2%, #FF79DA 110.74%);
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.35);
+}
+.presentation button span {
   text-decoration: none;
   color: var(--White, #FFF);
   height: 1.5rem;
+  font-size: 1rem;
+  font-weight: 500;
 }
 
+/*Bouton Restaurants*/
 button {
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 25px;
-  border: 1px solid var(--Button-Gradient, linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%));
+  border: 0px solid #9356DC;
   background: var(--Button-Gradient, linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%));
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
   height: 3.125rem;
   width: 11.625rem;
+}
+button:hover {
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.15) 100%), linear-gradient(201deg, #9356DC -5.2%, #FF79DA 110.74%);
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.35);
 }
 button p {
   text-decoration: none;
   color: var(--White, #FFF);
   height: 1.5rem;
   font-weight: 400;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+button a {
+  text-decoration: none;
 }
 
 header {
@@ -214,6 +234,7 @@ footer a {
     padding: 2rem;
   }
 }
+/*Localisation*/
 .localisation {
   display: flex;
   justify-content: center;
@@ -228,6 +249,7 @@ footer a {
   color: #353535;
 }
 
+/*Presentation*/
 .presentation {
   display: flex;
   flex-direction: column;
@@ -242,6 +264,7 @@ footer a {
   margin-bottom: -1.5rem;
 }
 
+/*Fonctionnement*/
 .fonctionnement {
   display: flex;
   flex-direction: column;
@@ -283,7 +306,7 @@ footer a {
   justify-content: center;
   color: #F6F6F6;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 0.875rem;
   margin-left: -0.75rem;
 }
 .fonctionnement ol li:nth-child(1)::before {
@@ -315,12 +338,7 @@ footer a {
   padding-left: 0.4rem;
 }
 
-.restaurant__container {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-}
-
+/*Restaurants*/
 .restaurants {
   display: flex;
   flex-direction: column;
@@ -365,11 +383,7 @@ footer a {
 }
 .description_carte p {
   padding-left: 0.75rem;
-}
-
-.logo_coeur {
-  display: flex;
-  justify-content: flex-end;
+  padding-bottom: 1rem;
 }
 
 .restaurants .liste_cartes .carte_restaurant.nouveau::after {
@@ -383,10 +397,48 @@ footer a {
   font-family: "Roboto";
 }
 
+/*Coeur*/
+.conteneur_coeur {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 21.3125rem;
+  position: absolute;
+  bottom: 14%;
+  left: 90%;
+}
+.conteneur_coeur input[type=checkbox] {
+  display: none;
+}
+.conteneur_coeur input[type=checkbox]:not(:checked) + .i-coeur i {
+  animation: none;
+}
+
+.i-coeur i {
+  font-size: 1.375rem;
+  -webkit-background-clip: text;
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+  transition: color 500ms cubic-bezier(0.55, 1.2, 0.93, 1);
+  padding-right: 1.25rem;
+}
+
+input[type=checkbox]:checked ~ i {
+  background: linear-gradient(176deg, #9356DC 0%, #FF79DA 100%);
+  -webkit-background-clip: text;
+  color: transparent;
+  font-weight: 900;
+  font-size: 1.375rem;
+  border: 1px solid transparent;
+  animation: remplissage 300ms forwards;
+  transform-origin: bottom;
+}
+
 /*Media query*/
 @media (min-width: 992px) {
   .presentation h1 {
-    font-size: 40px;
+    font-size: 2.5rem;
   }
   .fonctionnement {
     padding-left: 10rem;
@@ -410,6 +462,23 @@ footer a {
     grid-row-gap: 3.12rem;
   }
 }
+/*Animation menu*/
+.section_menu {
+  opacity: 0;
+  transform: translateX(-100%);
+  animation: slideIn 1.5s forwards;
+}
+.section_menu[data-order="1"] {
+  animation-delay: 0.5s;
+}
+.section_menu[data-order="2"] {
+  animation-delay: 1.5s;
+}
+.section_menu[data-order="3"] {
+  animation-delay: 2s;
+}
+
+/*RESTAURANTS*/
 main img {
   height: 17.18rem;
   width: 100%;
@@ -427,16 +496,28 @@ main img {
   padding: 2rem 1rem 2rem 1rem;
   background-color: #F6F6F6;
 }
-
-.conteneur_coeur {
-  display: flex;
-  justify-content: space-between;
-  width: 21.3125rem;
-}
-.conteneur_coeur h1 {
-  font-size: 1.65rem;
-  overflow: hidden;
+.menu h1 {
+  font-size: 1.75rem;
   white-space: nowrap;
+  margin: 0;
+}
+
+.titre-coeur {
+  width: 100%;
+}
+
+.conteneur_coeur_restaurant {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+input[type=checkbox] {
+  display: none;
+}
+input[type=checkbox]:not(:checked) + .i-coeur i {
+  animation: none;
 }
 
 .section_menu {
@@ -457,27 +538,62 @@ main img {
 .intitule_plat {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
   width: 100%;
   height: 4.5rem;
-  background: var(--Background, #F6F6F6);
   border-radius: 20px;
-  overflow: hidden;
-  border: 1px solid #F6F6F6;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-  overflow: hidden;
   white-space: nowrap;
   align-self: center;
+  overflow: hidden;
+  background-color: white;
+}
+.intitule_plat .description_carte {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .intitule_plat span {
   margin-left: auto;
-  margin-top: 1.87rem;
+  margin-right: 1rem;
+  margin-top: 1.4rem;
+  font-weight: 700;
+  transition: transform 0.6s ease-in-out;
 }
 .intitule_plat h3 {
-  margin-bottom: 0.15rem;
+  margin-top: 0.5rem;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .intitule_plat p {
   margin-bottom: 0.5rem;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.check {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #99E2D0;
+  border-radius: 0 1rem 1rem 0;
+  width: 3.66rem;
+  height: 4.5rem;
+  margin-right: -3.66rem;
+  transition: all 0.6s ease-in-out;
+  opacity: 0;
+  text-overflow: ellipsis;
+}
+.check i {
+  color: #99E2D0;
+  background-color: white;
+  border-radius: 50%;
+  font-size: 0.75rem;
+  padding: 0.2rem;
+}
+.intitule_plat:hover .check {
+  margin-right: 0;
+  opacity: 1;
 }
 
 /*Media query*/
@@ -489,10 +605,123 @@ main img {
     width: 70%;
     margin-left: 15%;
   }
+  .conteneur_coeur_restaurant {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 30px;
+  }
   .section_menu {
     padding-left: 10rem;
     padding-right: 10rem;
   }
+}
+/*Loader*/
+@keyframes fade-out {
+  from {
+    opacity: 0.8;
+  }
+  to {
+    opacity: 0;
+    pointer-events: none;
+  }
+}
+@keyframes bounce {
+  to {
+    transform: translateY(-10px);
+  }
+}
+@keyframes blur-animation {
+  to {
+    filter: blur(0);
+  }
+}
+/*Animation restaurants*/
+@keyframes slideIn {
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+/*Animation coeur*/
+@keyframes remplissage {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  20% {
+    opacity: 0.2;
+    transform: scale(0.2);
+  }
+  40% {
+    opacity: 0.4;
+    transform: scale(0.4);
+  }
+  60% {
+    opacity: 0.6;
+    transform: scale(0.6);
+  }
+  80% {
+    opacity: 0.8;
+    transform: scale(0.8);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+.loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgb(255, 255, 255);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 1;
+  animation: fade-out 5s forwards, bounce 5s infinite alternate;
+  z-index: 1;
+}
+
+.c1,
+.c2,
+.c3 {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 4px;
+  margin: 0 2rem;
+}
+
+.c1 {
+  background-color: #9356DC;
+}
+
+.c2 {
+  background-color: #FF79DA;
+}
+
+.c3 {
+  background-color: #99E2D0;
+}
+
+.loader:only-child {
+  filter: blur(5px);
+  animation: blur-animation 6s forwards;
+}
+
+.c1 {
+  animation: bounce 0.5s infinite alternate;
+}
+
+.c2 {
+  animation: bounce 0.5s 0.1s infinite alternate;
+}
+
+.c3 {
+  animation: bounce 0.5s 0.2s infinite alternate;
 }
 
 /*# sourceMappingURL=styles.css.map */
