--- a/scss/pages/restaurant.scss
+++ b/scss/pages/restaurant.scss
@@ -1,94 +1,176 @@
+/*Animation menu*/
+
+.section_menu {
+  opacity: 0;
+  transform: translateX(-100%);
+  animation: slideIn 1.5s forwards;
+
+  &[data-order="1"] {
+    animation-delay: 0.5s;
+  }
+
+  &[data-order="2"] {
+    animation-delay: 1.5s;
+  }
+
+  &[data-order="3"] {
+    animation-delay: 2s;
+  }
+}
+
+/*RESTAURANTS*/
+
 main img {
-    height: 17.18rem;
-    width: 100%;
-    object-fit: cover;
+  height: 17.18rem;
+  width: 100%;
+  object-fit: cover;
 }
 
 .menu {
-    position: relative;
-    margin-top: -3.5rem;
-    border-radius: 2.5rem 2.5rem 0 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 2.5rem;
-    padding: 2rem 1rem 2rem 1rem;
-    background-color: $quaternary-color;
+  position: relative;
+  margin-top: -3.5rem;
+  border-radius: 2.5rem 2.5rem 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 2.5rem;
+  padding: 2rem 1rem 2rem 1rem;
+  background-color: $quaternary-color;
+
+  h1 {
+    font-size: 1.75rem;
+    white-space: nowrap;
+    margin: 0;
+  }
 }
 
-.conteneur_coeur {
-    display: flex;
-    justify-content: space-between;
-    width: 21.3125rem;
+.titre-coeur {
+  width: 100%;
+}
 
-    h1 {
-        font-size: 1.65rem;
-        overflow: hidden;
-        white-space: nowrap;
-    }
+.conteneur_coeur_restaurant {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+input[type="checkbox"] {
+  display: none;
+
+  &:not(:checked)+.i-coeur i {
+    animation: none;
+  }
 }
 
 .section_menu {
-    display: flex;
-    flex-direction: column;
-    row-gap: 0.75rem;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.75rem;
+  width: 100%;
 
 
-    h2::after {
-        content: "";
-        display: block;
-        width: 2.5rem;
-        height: 0.188rem;
-        background: $tertiary-color;
-        margin-top: 0.5rem;
-    }
+  h2::after {
+    content: "";
+    display: block;
+    width: 2.5rem;
+    height: 0.188rem;
+    background: $tertiary-color;
+    margin-top: 0.5rem;
+  }
 }
 
 .intitule_plat {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    width: 100%;
-    height: 4.5rem;
-    background: var(--Background, $quaternary-color);
-    border-radius: 20px;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 4.5rem;
+  border-radius: 20px;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+  white-space: nowrap;
+  align-self: center;
+  overflow: hidden;
+  background-color: white;
+
+  .description_carte {
     overflow: hidden;
-    border: 1px solid $quaternary-color;
-    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  span {
+    margin-left: auto;
+    margin-right: 1rem;
+    margin-top: 1.4rem;
+    font-weight: 700;
+    transition: transform 0.6s ease-in-out;
+
+  }
+
+  h3 {
+    margin-top: 0.5rem;
+    text-overflow: ellipsis;
     white-space: nowrap;
-    align-self: center;
+    overflow: hidden;
+  }
 
-    span {
-        margin-left: auto;
-        margin-top: 1.87rem;
-    }
+  p {
+    margin-bottom: 0.5rem;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+}
 
-    h3 {
-        margin-bottom: 0.15rem;
-    }
+.check {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: $tertiary-color;
+  border-radius: 0 1rem 1rem 0;
+  width: 3.66rem;
+  height: 4.5rem;
+  margin-right: -3.66rem;
+  transition: all 0.6s ease-in-out;
+  opacity: 0;
+  text-overflow: ellipsis;
 
-    p {
-        margin-bottom: 0.5rem;
-    }
+  & i {
+    color: $tertiary-color;
+    background-color: white;
+    border-radius: 50%;
+    font-size: 0.75rem;
+    padding: 0.2rem;
+  }
+
+  .intitule_plat:hover & {
+    margin-right: 0;
+    opacity: 1;
+  }
 }
 
 
 /*Media query*/
 
 @media (min-width: 992px) {
-    .menu {
-        justify-content: center;
-        align-items: center;
-        padding-bottom: 2.5rem;
-        width: 70%;
-        margin-left: 15%;
-    }
+  .menu {
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 2.5rem;
+    width: 70%;
+    margin-left: 15%;
+  }
+
+  .conteneur_coeur_restaurant {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 30px;
+  }
 
 
-    .section_menu {
-        padding-left: 10rem;
-        padding-right: 10rem;
-    }
+  .section_menu {
+    padding-left: 10rem;
+    padding-right: 10rem;
+  }
 }
