--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,3 +9,5 @@
 @import "./utils/functions.scss";
 @import "./utils/mixins.scss";
 @import "./utils/variables.scss";
+@import "./utils/keyframes.scss";
+@import "./utils/loader.scss";
