--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -130,6 +130,8 @@ ol, ul {
   height: 1.5rem;
   font-size: 1rem;
   font-weight: 500;
+  display: flex;
+  align-items: center;
 }
 
 /*Bouton Restaurants*/
