--- a/scss/components/button.scss
+++ b/scss/components/button.scss
@@ -19,6 +19,8 @@
         height: 1.5rem;
         font-size: 1rem;
         font-weight: 500;
+        display: flex;   
+        align-items: center;     
     }
 }
 
